@@ -8,29 +8,31 @@ DIST razercfg-0.20.tar.bz2 68289 SHA256 de2f2f038b085cb22a97968f2f12a4c776741af8
 DIST razercfg-0.21.tar.bz2 68274 SHA256 bfbd6089273fbec3f7495032b623f5c46bbf2e3f953130cb0f610e5c8eede884 SHA512 2514908547e5f7ffbf79231a66f6ac731ebc328944c9589cc7218a83e16f7aed5e741dceb06949222ec35254fb596490aa8bd2bad4682a362de09144e00df638 WHIRLPOOL ffcb3a5fe2b18a96998222714a0ab3ddb26f93e157a164922b2fdb9db06d273a071ee28e49d5d7cf2ab4447ffb9522b61b35c9ea31085cf54dfd1c48a9558975
 DIST razercfg-0.22.tar.bz2 68137 SHA256 c587fec284fc3f564f94b4ffcd7f24a5103b9fe2aaa60aa6e59812404e46c283 SHA512 cc5c2fd6a169ccddaa4010f50fcf80a5f01ef9a808fec7ddb0f19c24974b064bd77eb054d1935f179229ab551bbc3305824140c653be38533b2228abcc3d25ae WHIRLPOOL febf79693876bd7e74a59557e23fb07d9e969d85729600dd96ac419f52bd00aea998630aa29e32911dbd57a9652cec2eb39b44070e62dabf72d2a9ee55871b70
 DIST razercfg-0.23.tar.bz2 69425 SHA256 44bdc48588c504a937d811e84a0ecb054e35d3e2e4980d7d76b3ea8c2f0d1b43 SHA512 79c795870efa960b42abc70710b4bebe793acb9e732943207ca4b34d35ba926af4877993db888829dbacedbe327324fba0ab2ef82ced1d653b4aee23e154fd8b WHIRLPOOL 11c57842daeb241d19b3546db0c4b3a98e59b565176f89227dd159f31b3037ce08130014dc35ae4db5dc81744a94a405252787b6a42c67129857f81f6eb0411c
+DIST razercfg-0.24.tar.bz2 69302 SHA256 dd47e370a440c485e888a1f66bec467fffb2833db8ea433d102c5c12f914cccf SHA512 a86614d1ac1ab5cf329bea36c9b7d974d4de9d7014bccbd55cf45a7b2c72b312ce6d74680127af97413344c77148b9b51614949bcb8e483b18dbbf4f5d5a7cf9 WHIRLPOOL 2e4c277083aea3cfb9ca64a88874e57329d8f924f4b664575d3678e1123e424d4d462920d042e8b2c20c7fc305060979b8e7e4eb89fc0e026ba45c1e9699ab4a
 EBUILD razercfg-0.19_p20121013.ebuild 1559 SHA256 0e0048cd92227dbcb136d0157e1f308f24acf769f5a272cc03a7b19ccf72c96c SHA512 d3e8be35ef7e93aab401d38e2e42d307185d9f401237acfbb11eb0616254da2a92272fb15596fe8d716e9825da1d048cfeae83cf6bccfde3bff86321314f5884 WHIRLPOOL 8e7bb9205445eb7bfc348a7b7dbc008585f0b315019ef8ccf46e8e442b4b4009a54615a24546af26959bbdf45e29912b79a5c34cc176334e0aab16ef77344f80
 EBUILD razercfg-0.20.ebuild 1396 SHA256 60426806ac58b8c46365877e6d21409e8cf938eaaf0038ec893679ec88f104f2 SHA512 9e21d54e7efccea4f206e7f9200c6c25471ee4a0a0f6cd336e2030975109aa93992d2a2fe6e71b8cc2f947d4d8dd69092dac866d369314fb7dcfc4c1654cd8df WHIRLPOOL a7233b8f2fa2442636ea99f0a23224d64933281e22c466848cafe5fb983b9304011cc8e53649acdc82e85a2e61f33a8c65086e2a9175af6114ceeb9e43ac2466
 EBUILD razercfg-0.21.ebuild 1396 SHA256 6396fa020b1ad6026ecf0ea2ebe36cb2dbf4d9f60f3a6f66a09962b2264ab79f SHA512 b51a3442f0a299405dbf4fa77846911d9836c491ea9ec0f836c6d4d1ead9f10fa8640630d5d658333ffa081eec112274a9dc6fc6e7039088958b07059865ced9 WHIRLPOOL 528274624499d5a30ff8958a87ddfc7d20bea92e95c780118a19e5fffab178adc8783a915f9af974e74df72a7627361bedfbf94dd0e4f7a84eb81531132ff528
 EBUILD razercfg-0.22-r1.ebuild 1473 SHA256 d895cf3a622b50284d5bfe143521b7d5862a5c359f0569e61d3ae5f4f58d1f2c SHA512 8f8bad6444302d7997e815415c6cd4efcbcbfcaef5f2448a2594bf492b042fe0422973366b01a876d77b8d004ad5f6379454581777cc1b6812977bc2176977bc WHIRLPOOL c471cc7058bf65bba82aa3fde9261e60dab0ece84304a868868414a523a87a44adccae30292d27edda67a67f04eaacf8b2a9498166d46891e198ac61a3f2af28
 EBUILD razercfg-0.23.ebuild 1470 SHA256 33be8f6ea18a273eda42aede01eb0cd7c8e148b74a2a18f41a49ea1c897f3a9d SHA512 0f8f1f4816ab59a1728607f9406a2a4297236c43df99723b13dece79d60229971bf51c9dee5008c620596a59a6f36e571be23efd6b538a9d1cd0fd048ce4e49c WHIRLPOOL de0819786acb5c0d3e7716b32f9eef6b77725bb53ec5b5bed8bf54e7aaf9588ba54712bbc46b40b7a60c92ea7b6e2547f34f27773e7a16240105c0aa9927bfca
-MISC ChangeLog 3589 SHA256 69e8b08aaef10e033c328f605c765f7e38f276fd49db807a409a0b925c950a56 SHA512 5939f321b688bf1388b5b4d0c3a26ff0bdbc4efae628a5e42af07c62b196e08265e34004cc699f7451e2117641dcb443daf79c1a5a87709e100c279154b36ddc WHIRLPOOL 8d9368535c5c0f3016398f508cc41a305fdd9f01c7c564aa0c7f87159b57d109a5d158a6bca6f27d4d725470cc1d5a19c1cfdb6e7c19af579426c286f82e3648
+EBUILD razercfg-0.24.ebuild 1644 SHA256 00616130392a030c1271c61d26e55c21bfed2ea6a8c2ecdaa2436aa72959cd32 SHA512 d58eaaba05c84d38d06f978b596028cb1b9b1874bb965e95c242865c812b6fd4f5a10ca39f17658cfa9707b5dea7365ced9f176de39a0d0d3b700422eec05b7d WHIRLPOOL 37b6314182e5ebb26798b6906d73068f0144fe67ad23d188db519ead87f5338dde107ed430f5ed3b666725d783a5f0cf7823b787d9086c5bb1f1e37f6f23df17
+MISC ChangeLog 3744 SHA256 258269beb6280b9e6890ace2d26003bedaf837d746f1dd16302622b23c065a2d SHA512 02a977b28eb461e7e9e4c0454bcb47aa6ad97f504694eef0b2af31505e75088f3357cf52fb9efe0ec87932f72155ed6d39f756d07c7bba294e08fc6b5bb5505b WHIRLPOOL 212a5e6a15b8883169bcc57f73345149f1d5dab986321862ac9112cfca6e000b9febb8a9e8391d6a5a10e0c3a16e12189d28cc17d245d5752361e4a077c8d951
 MISC metadata.xml 904 SHA256 5b25d7c848021f7153a4556c316e694db1cbda8f31d628fa6cfbff738520d621 SHA512 f5d43e4b625958c0be9f31c847d7e4631bf1100cb26d0fa19ee5d4a8d43b1b0f0b8c72462562c3ea4bbb867a852aa8d81debc0b02fef3c7ace8f213439dcb585 WHIRLPOOL e50810579d9d78d25e8c8c78921c93f4dc566dbca3d527c3ede9b0829dea2c2f47a20a8a69622d1b049942fdee1b64840a0f6aed5b334e30cd56059c460464d2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTCnRNXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJTOrINXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0ODVGNzIyN0VCNkRCNUU5MzkzNzY5ODAw
-MTUxODYzQTY3NjUyOTAwAAoJEAFRhjpnZSkAQHAQAKpEqV4vZEcIlj/CtvqrWXP3
-uZUvl755fU6lKUrNDdhthYmXmZLiIPUMeJRFmqunoeeI+8jac65o0GdvmZcB86io
-uRMiQHqexx7FCmTMAkJiPuxOyuG/SMgu5skqHHnwdUQMv+rYw/6zVeE6XLKEx+Rj
-7fs3wrWHBg9AFB8hXeNghuyytLPf9CqVJPrUJKML0TL5L4+LUC0C8IJ8TbxH0lFU
-fpILkTCDJiGHytLFVN9rLnId2SISGFB+jF3C4GY7mVATuKJ6fr7K4WSu+6tyRroY
-dPjeRn0Qp7lCW6mU6CGWs9Ol2HqxvUdNsm7a7kToN+W0PTCIpZ4pmvEFRG7sKZIn
-0nAmOiQTP19Y0V+0y8bU+7bBJQ9hxYWiEQg3xRqh8y4ny+50kQxwGHP5d6dn5k53
-4ERGWrKWDdmIYF6AqMWBL1yoErSpiCKHA/CpngH3y3i5dKkto5tbuW5jmW0sqHgm
-QBBOaYF+6g3e2lpD+3L7bbekIIxfg46OU8XbX3RdvQrMGCgj8/0RxjwY0XbYw/yJ
-VGL6aPt5s+n+79VqIfuBsJ4gQX3wgmEFp+Hm/V6JPJZFYhfwK8ceTp0tH/O6xBpT
-7rFiOHSyPH6XuGqN9v3kAlePs5p/hBB9wAnTh9W0TUmyEX/cQ4flr2nvw5oI2Bq7
-KGjbYH4tdCzxWvmW3p6I
-=q3UN
+MTUxODYzQTY3NjUyOTAwAAoJEAFRhjpnZSkAB+gP/A/+LjG+CrLQFQRiKnEvpzAj
+32svU8bruV9XhM44mMMLxfCiymETBOGFlKtDl49aAD5EH6WhrTYOdWGKUwmDphue
+mVttSMJhsYJED5w7IjMpAJVd0kV5g/o+eo9WzrPxkzbrD7HOyPZiyi3OloUNBx7z
+Vjd7rY2govzP7pWOFpy72PWWYGz/LJgIgoftGCT2OlsUWfcAD6O3fTdqSGq1pJ8y
+CR60+QVkbR6UCNUQs6I7x7SfNexr0FAPQY6guhpOWChdwOcASPUdNzj41R9sNnJd
+DW3jaZz/yrnW+AnNpeFx5IJZml5UOYUmVZVrV/SDt0Q1/zfk9nmfyoKANRkvHPN1
+m6SBHudh1wCc9PkU0ndkE8gxY4HwrDv4IkN36VqA7tapPdr89R5z60H1JbapI+rp
+Ehi35hXo+2h/Nu9Rr17W7pgWziYjPsC4akgNImjicuioSiDnsxUXwKoQpU7ObSqp
+VJyCtbKu2kzCpvgDcWQ/4xcoTmpZ4ZPWr+AtcD5Djo4mHoRIK3eMoKOYUBUebEho
+jae3cZ2aD6jOtzcvDkk6RJaHB4wwD56D9CJ6RMJSjhpOIkONfUE/XDfDiHmJ12vd
+0xstGmOAfDKmYA3cbtWUL6bHiDXK7grbvWYgMGicGKnd/OWI6KG8dBVXEtpHJMIO
+X9w7eyD4OH7LXo2qUxaD
+=+JwI
 -----END PGP SIGNATURE-----
